# ec4x

./: .gitignore  2025-11-20-combat-work.txt  AGENTS.md  BALANCE_ANALYSIS.md  BUILD_QUEUE_BUG.txt  CLAUDE.md  CLAUDE_CONTEXT.md  CONTEXT.md  Cargo.toml  ENGINE_AUDIT.md  FLEET_MODAL_TESTING.md  GEMINI.md  IMPLEMENTATION_GUIDE.md  INSTALL.md  LICENSE.md  M1_CHECKLIST.md  MIGRATION_COMPLETE.md  PROJECT_STRUCTURE.md  README.md  SESSION_SUMMARY.md  TEST_DATA_ARCHIVAL.md  balance_test_output.txt  client  ec4x.nimble  flake.nix  full_test_output.txt  iu_growth_test.txt  moderator  rba_iu_test.txt  run_balance_test.py  run_balance_test_parallel.py  run_map_size_test.py  run_stress_test.sh  test_newgame_quick  test_report.csv  view_test_archives.sh
.claude/: settings.local.json
ai_training/: README.md  TRAINING_README.md  TRAINING_STATUS.md  generate_parallel.py  prepare_training_data.py  requirements.txt  run_game.sh  setup_amd_ml.sh  setup_training_env.sh  test_multiproc.py  train.sh  train_lowmem.py  train_model.py  train_simple.py  train_with_fixes.sh
analysis/: __init__.py  balance_analyzer.py  cli.py  rba_baseline_analysis.py  rba_baseline_report.md  reports.py
assets/: detection.xlsx  ec4x_budget.xlsx  game_config.toml  ptu_pu.xlsx  scout_detection.xlsx
audit_results/: EXECUTIVE_SUMMARY.md  FINAL_REPORT.md  architecture_compliance_audit.md  compilation_summary.md  post-fix_compilation_status.md
client/: Cargo.toml
config/: balance_tests.toml  client.kdl  combat.kdl  combat.toml  daemon.kdl  (+37 more)
moderator/: Cargo.toml
moderator/src/: config.rs  create.rs  main.rs
(+2293 files in other folders)
